write down thread-safety contracts, fix a few stale javadocs
PluginCatalog.policies() keeps identity keys, 'always allow' scopes on
matchTarget, and ArchitectureTest flags any non-JDK import in domain.